<resources>
    <string name="app_name">Priorities</string>
    <string name="task_name_hint">Enter Task Name Here</string>
    <string name="task_notes_hint">Enter Notes Here</string>
    <string name="lbl_task_name">Task Name</string>
    <string name="lbl_priority">Priority</string>
    <string name="lbl_notes">Notes</string>
    <string name="lbl_due_date">Due Date</string>
    <string name="lbl_status">Status</string>
    <string name="lbl_status_todo">TO-DO</string>
    <string name="lbl_status_done">Done</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string-array name="spinner_priority_items">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string-array name="spinner_status_items">
        <item>TO-DO</item>
        <item>Done</item>
    </string-array>
    <string name="Task">Task</string>
    <string name="task_item_view_holder">TaskItemViewHolder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_task">Add Task</string>
    <string name="edit_task">Edit</string>
    <string name="delete_task">Delete</string>
    <string name="close_task_view">Close</string>
    <string name="priority_high">High</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_low">Low</string>
</resources>
