<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_delete"
        android:onClick="onDeleteTask"
        android:id="@+id/miDeleteTask"
        android:title="@string/delete_task">
    </item>
    <item
        app:showAsAction="ifRoom"
        android:icon="@mipmap/ic_edit"
        android:onClick="onEditTask"
        android:id="@+id/miEditTask"
        android:title="@string/edit_task">
    </item>
    <item
        app:showAsAction="always"
        android:icon="@mipmap/ic_close"
        android:onClick="onClose"
        android:id="@+id/miClose"
        android:title="@string/close_task_view">
    </item>
</menu>