<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context="com.example.akshayb.simpletodo.fragments.EditFragment">

    <LinearLayout
        android:id="@+id/llTaskName"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".30"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/tvTaskLabel"
                android:textStyle="bold"
                android:maxLines="1"
                android:text="@string/lbl_task_name"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".70"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/tvTaskNameContent"
                android:maxLines="1"
                android:hint="@string/task_name_hint"
                android:layout_gravity="end"
                android:textAlignment="textEnd"
                android:layout_width="match_parent"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_below="@+id/llTaskName"
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_below="@+id/separator1"
        android:id="@+id/llDueDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".30"
            android:layout_gravity="center"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tvDatePicker"
                android:text="@string/lbl_due_date"
                android:textStyle="bold"
                android:maxLines="1"
                android:hint="@string/task_name_hint"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".70"
            android:layout_height="wrap_content">
            <DatePicker
                android:id="@+id/dpDate"
                android:inputType="date"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_below="@+id/llDueDate"
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_below="@+id/separator2"
        android:id="@+id/llNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".30"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/tvTaskNotesLabel"
                android:text="@string/lbl_notes"
                android:textStyle="bold"
                android:maxLines="1"
                android:hint="@string/task_name_hint"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".70"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/etTaskNotesContent"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:calendarViewShown="false"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_below="@+id/llNotes"
        android:id="@+id/separator3"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>


    <LinearLayout
        android:layout_below="@+id/separator3"
        android:id="@+id/llPriority"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".30"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/tvPriorityLabel"
                android:text="@string/lbl_priority"
                android:textStyle="bold"
                android:hint="@string/task_name_hint"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".70"
            android:layout_height="match_parent">
            <Spinner
                android:id="@+id/spPriority"
                android:inputType="text"
                android:text="My First Task"
                android:layout_gravity="center"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_below="@+id/llPriority"
        android:id="@+id/separator4"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_below="@+id/separator4"
        android:id="@+id/llStatus"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".30"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/tvStatusLabel"
                android:text="@string/lbl_status"
                android:textStyle="bold"
                android:maxLines="1"
                android:hint="@string/task_name_hint"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".70"
            android:layout_height="match_parent">
            <Spinner
                android:id="@+id/spStatus"
                android:inputType="text"
                android:text="My First Task"
                android:layout_gravity="center"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/llStatus"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".30"
            android:layout_marginStart="30dp"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnCancel"
                android:text="@string/button_cancel"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:width="30dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPurpleHeart"
                android:textColor="@color/colorWhisper"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".30"
            android:layout_height="wrap_content">
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".30"
            android:layout_marginEnd="30dp"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnSave"
                android:text="@string/button_save"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:width="30dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPurpleHeart"
                android:textColor="@color/colorWhisper"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
